auth_application and add slots_lists api spec
