# slot_booking/api_specs/api_spec.json
@@ -1,212 +1,192 @@
 {
-        "swagger": "2.0",
-        "host": "127.0.0.1:8000",
-        "basePath": "/api/slot_booking/",
-        "info": {
-            "version": "1.0.0",
-            "title": "Simple API",
-            "description": "A simple API to learn how to write OpenAPI Specification"
-        },
-        "schemes": [
-            "http"
-        ],
-        "consumes": [
-            "application/json"
-        ],
-        "produces": [
-            "application/json"
-        ],
-        "securityDefinitions": {
-            "oauth": {
-                "tokenUrl": "http://auth.ibtspl.com/oauth2/",
-                "flow": "password",
-                "scopes": {
-                    "read": "read users",
-                    "write": "create users",
-                    "update": "update users",
-                    "delete": "delete users"
-                },
-                "type": "oauth2"
-            }
-        },
-        "security": [],
-        "definitions": {
-            "TodoId": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer"
-                    }
-                }
+   "swagger":"2.0",
+   "host": "127.0.0.1:8000",
+   "basePath": "/api/auth_app/",
+   "info":{
+      "version":"1.0.0",
+      "title":"Simple API",
+      "description":"A simple API to learn how to write OpenAPI Specification"
+
+    },
+   "consumes":[
+      "application/json"
+
+    ],
+   "produces":[
+      "application/json"
+
+    ],
+   "securityDefinitions":{
+      "oauth":{
+         "tokenUrl":"http://auth.ibtspl.com/oauth2/",
+         "flow":"password",
+         "scopes":{
+            "read":"read users",
+            "write":"create users",
+            "update":"update users",
+            "delete":"delete users"
+          },
+         "type":"oauth2"
+      }
+   },
+   "definitions":{
+      "SlotDetails": {
+         "type": "object",
+         "properties": {
+            "slot_id": {
+               "type": "integer"
             },
-            "BasicTodo": {
-                "type": "object",
-                "properties": {
-                    "description": {
-                        "type": "string"
-                    },
-                    "is_completed": {
-                        "type": "boolean"
-                    },
-                    "remind_at": {
-                        "type": "string"
-                    }
-                },
-                "required": [
-                    "description"
-                ]
+            "start_time": {
+               "type": "string",
+               "format": "time"
             },
-            "Todo": {
-                "allOf": [
-                    {
-                        "$ref": "#/definitions/BasicTodo"
-                    },
-                    {
-                        "$ref": "#/definitions/TodoId"
-                    }
-                ]
+            "end_time": {
+               "type": "string",
+               "format": "time"
             }
-        },
-        "parameters": {
-            "TodoId": {
-                "description": "todo id",
-                "in": "path",
-                "name": "id",
-                "required": true,
-                "type": "integer"
+         }
+      },
+      "CompleteSlotDetails": {
+         "allOf": [
+            {
+               "$ref": "#/definitions/SlotDetails"
             },
-            "BasicTodo": {
-                "description": "Todo Parameter",
-                "in": "body",
-                "name": "todo",
-                "required": true,
-                "schema": {
-                    "$ref": "#/definitions/BasicTodo"
-                }
+            {
+               "type": "object",
+               "properties": {
+                  "date": {
+                     "type": "string",
+                     "format": "date"
+                  },
+                  "washing_machine_id": {
+                     "type": "integer"
+                  }
+               }
             }
-        },
-        "responses": {
-            "SuccessResponse": {
-                "description": "success response"
+         ]
+      },
+   },
+   "parameters":{},
+   "responses":{
+      "AvailableSlotsResponse": {
+         "description": "Available slots for user to book slot",
+         "schema": {
+            "type": "object",
+            "properties": {
+               "available_slots": {
+                  "type": "array",
+                  "items": {
+                     "type": "object",
+                     "properties": {
+                        "date": {
+                           "type": "string",
+                           "format": "date"
+                        },
+                        "slots": {
+                           "type": "array",
+                           "items": {
+                              "allOf": [
+                                 {
+                                    "$ref": "#/definitions/SlotDetails"
+                                 },
+                                 {
+                                    "type": "object",
+                                    "properties": {
+                                       "is_available": {
+                                          "type": "boolean"
+                                       }
+                                    }
+                                 }
+                              ]
+                           }
+                        }
+                     },
+                     "required": [
+                        "date",
+                        "slots"
+                     ]
+                  }
+               }
             }
-        },
-        "paths": {
-            "/todos/": {
-                "get": {
-                    "summary": "Get all todos",
-                    "description": "Returns a list containing all todos.",
-                    "operationId": "get_todos",
-                    "security": [
-                        {
-                            "oauth": [
-                                "read"
-                            ]
-                        }
-                    ],
-                    "responses": {
-                        "200": {
-                            "description": "A list of todos",
-                            "schema": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/Todo"
-                                }
-                            }
-                        }
-                    }
-                },
-                "post": {
-                    "summary": "create a todo",
-                    "description": "Create a todo",
-                    "operationId": "create_todo",
-                    "security": [
-                        {
-                            "oauth": [
-                                "write"
-                            ]
-                        }
-                    ],
-                    "parameters": [
-                        {
-                            "$ref": "#/parameters/BasicTodo"
-                        }
-                    ],
-                    "responses": {
-                        "200": {
-                            "description": "create a todo",
-                            "schema": {
-                                "$ref": "#/definitions/TodoId"
-                            }
-                        }
-                    }
-                }
-            },
-            "/todos/{id}/": {
-                "parameters": [
-                    {
-                        "$ref": "#/parameters/TodoId"
-                    }
-                ],
-                "get": {
-                    "summary": "Get a todo",
-                    "description": "Returns a todo.",
-                    "operationId": "get_todo",
-                    "security": [
-                        {
-                            "oauth": [
-                                "read"
-                            ]
-                        }
-                    ],
-                    "responses": {
-                        "200": {
-                            "description": "A todo",
-                            "schema": {
-                                "$ref": "#/definitions/Todo"
-                            }
-                        }
-                    }
-                },
-                "put": {
-                    "parameters": [
-                        {
-                            "$ref": "#/parameters/BasicTodo"
-                        }
-                    ],
-                    "summary": "Updates a todo",
-                    "description": "Updates a todo.",
-                    "operationId": "update_todo",
-                    "security": [
-                        {
-                            "oauth": [
-                                "update"
-                            ]
-                        }
-                    ],
-                    "responses": {
-                        "200": {
-                            "$ref": "#/responses/SuccessResponse"
-                        }
-                    }
-                },
-                "delete": {
-                    "summary": "Deletes a todo",
-                    "description": "Deletes a todo.",
-                    "operationId": "delete_todo",
-                    "security": [
-                        {
-                            "oauth": [
-                                "delete"
-                            ]
-                        }
-                    ],
-                    "responses": {
-                        "200": {
-                            "$ref": "#/responses/SuccessResponse"
-                        }
-                    }
-                }
+         }
+      },
+      "UpcomingSlotsResponse": {
+         "description": "user booked upcoming slots details",
+         "schema": {
+            "type": "object",
+            "properties": {
+               "upcoming_slots": {
+                  "type": "array",
+                  "items": {
+                     "$ref": "#/definitions/CompleteSlotDetails"
+                  }
+               }
             }
-        }
-    }
-    
+         }
+      },
+      "PreviousSlotsResponse": {
+         "description": "user booked slots details previously",
+         "schema": {
+            "type": "object",
+            "properties": {
+               "previous_slots": {
+                  "type": "array",
+                  "items": {
+                     "$ref": "#/definitions/CompleteSlotDetails"
+                  }
+               },
+               "total_previous_slots": {
+                  "type": "integer"
+               }
+            }
+         }
+      }
+   },
+   "paths":{
+      "/available_slots/v1/": {
+         "get": {
+            "operationId": "get_available_slots",
+            "description": "available slots to book",
+            "parameters": [],
+            "security": [{
+               "oauth": ["read"]
+            }],
+            "responses": {
+               "200": {
+                  "$ref": "#/responses/AvailableSlotsResponse"
+               }
+            }
+         }
+      },
+      "/upcoming_slots/v1/": {
+         "get": {
+            "operationId": "get_upcoming_slots",
+            "description": "upcoming slots booked by user",
+            "parameters": [],
+            "security": [{
+               "oauth": ["read"]
+            }],
+            "responses": {
+               "200": {
+                  "$ref": "#/responses/UpcomingSlotsResponse"
+               }
+            }
+         }
+      },
+      "/previous_slots/v1/": {
+         "get": {
+            "operationId": "get_previous_slots",
+            "description": "previous slots booked by user",
+            "parameters": [],
+            "security": [{
+               "oauth": ["read"]
+            }],
+            "responses": {
+               "200": {
+                  "$ref": "#/responses/PreviousSlotsResponse"
+               }
+            }
+         }
+      }
+   }
+}
